[tool.poetry]
name = "protoblade"
version = "0.0.1"
description = ""
authors = ["John Otter"]
license = "Apache Software Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.24.4"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
